resolution fix on iOS

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,7 +24,7 @@
   }
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 420px) {
   .login-page {
     position: absolute;
     transform: translate(-50%, -50%);
